fixed visibility issue

--- a/css/song.scss
+++ b/css/song.scss
@@ -813,6 +813,7 @@ header {
         max-width: 100rem;
         margin: 0 auto;
         display: block;
+        width: 100%;
     }
 }
 .summary-wrapper {
